--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics-ktx:21.2.0")
     implementation("com.google.android.gms:play-services-recaptcha:17.0.0")
     implementation 'com.google.firebase:firebase-firestore-ktx:21.2.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
 
     implementation("androidx.core:core-ktx:1.7.0")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.3.1")
